<resources>
    <string name="app_name">NZSE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">Details</string>
    <string name="detailsButton">Details</string>
    <string name="ausleihenButton">Ausleihen</string>
    <string name="detailsBookName">Book Name</string>
    <string name="detailsBookSummary">Book Details</string>
    <string name="detailsBookAuthor">Book Author</string>
    <string name="detailsBookYear">Book Publication Year</string>
</resources>
